test ServerController aggiunto